@@ -12,7 +12,7 @@ public class CompassionDebuff : ModBuff
 	public override void SetStaticDefaults()
 	{
 		Main.debuff[Type] = true;
-		Main.buffNoSave[Type] = true;
+		Main.buffNoSave[Type] = false;
 		BuffID.Sets.NurseCannotRemoveDebuff[Type] = true;
 	}
 	public override void Update(Player player, ref int buffIndex)
